--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -355,6 +355,12 @@
   background-clip: text;
 }
 
+.dark .blog-newsletter-title{
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
 .blog-newsletter-subtitle {
   font-size: 16px;
   color: var(--text-secondary, #666);
